--- a/jena-fuseki2/jena-fuseki-ui/package.json
+++ b/jena-fuseki2/jena-fuseki-ui/package.json
@@ -22,8 +22,8 @@
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
     "@fortawesome/vue-fontawesome": "^3.0.1",
     "@popperjs/core": "^2.11.6",
-    "@triply/yasqe": "^4.2.27",
-    "@triply/yasr": "^4.2.27",
+    "@triply/yasqe": "^4.2.28",
+    "@triply/yasr": "^4.2.28",
     "@vue/compat": "^3.2.39",
     "axios": "^0.27.2",
     "bootstrap": "^5.2.1",
@@ -32,7 +32,8 @@
     "nanoid": "^4.0.0",
     "vue": "^3.2.39",
     "vue-router": "^4.1.5",
-    "vue-upload-component": "^3.1.2"
+    "vue-upload-component": "^3.1.2",
+    "yasgui": "https://github.com/NailaTINSALHI/Yasgui"
   },
   "devDependencies": {
     "@cypress/code-coverage": "^3.10.0",
